--- a/css/base.css
+++ b/css/base.css
@@ -18,6 +18,15 @@ html {
   background-color: #F9F9FB;;
 }
 
+body {
+  user-select: none;
+}
+
+@supports (-webkit-touch-callout: none) {
+  body {
+    height: -webkit-fill-available;
+  }
+}
 
 
 /* comments
