--- a/css/base.css
+++ b/css/base.css
@@ -20,6 +20,8 @@ html {
 
 body {
   user-select: none;
+  -webkit-touch-callout:none; /* リンク長押しのポップアップを無効化 */
+  -webkit-user-select:none; /* テキスト長押しの選択ボックスを無効化 */
 }
 
 @supports (-webkit-touch-callout: none) {
