ズームを無効化する

--- a/css/base.css
+++ b/css/base.css
@@ -14,8 +14,9 @@
 }
 
 html {
+  touch-action: manipulation;
   overflow: hidden;
-  background-color: #F9F9FB;;
+  background-color: #F9F9FB;
 }
 
 body {
